RESOLVED FIXED62419
Calling WebKitBlobBuilder.append with null argument should not crash
https://bugs.webkit.org/show_bug.cgi?id=62419
Summary Calling WebKitBlobBuilder.append with null argument should not crash
Jian Li
Reported 2011-06-09 17:45:52 PDT
Calling WebKitBlobBuilder.append with null argument should not crash.
Attachments
Proposed Patch (3.28 KB, patch)
2011-06-09 17:59 PDT, Jian Li
levin: review+
jianli: commit-queue-
Jian Li
Comment 1 2011-06-09 17:59:11 PDT
Created attachment 96679 [details] Proposed Patch
Jian Li
Comment 2 2011-06-09 18:10:11 PDT
Note You need to log in before you can comment on or make changes to this bug.