Calling WebKitBlobBuilder.append with null argument should not crash https://bugs.webkit.org/show_bug.cgi?id=62419

Reviewed by David Levin.

Source/WebCore:

Test: fast/files/blob-builder-crash.html

* fileapi/WebKitBlobBuilder.cpp:
(WebCore::WebKitBlobBuilder::append):

LayoutTests:

* fast/files/blob-builder-crash-expected.txt: Added.
* fast/files/blob-builder-crash.html: Added.

Canonical link: https://commits.webkit.org/77917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88510 268f45cc-cd09-0410-ab3c-d52691b4dbfc